# EMicrographs_to_AtoModels

./: .gitignore  README.md  pyproject.toml
Alg_Combination/: Alg_Comb_1stAprox_Single_Image.py  Alg_Comb_Single_Image_Strain.py  Alg_Comb_Single_Image_Strain_HeteroSemi.py  Alg_Combination_1stAprox_2.0.py  Alg_Combination_1stAprox_2.0_DEBUGGING.py  Alg_Combination_1stAprox_2.5.py  ChangeLog.txt
Atomistic_model_builder/: Atomistic_Model_Builder.py  Collapse_decimal_occupancy_real_stoichiometry_atom_models.py  Segmentation_to_Atomistic_Model.py  crystallographic_computations.py
Data_Processing_Functions/: Atomic_Resolution_Images_Analysis.py  Built_in_functions_filters.py  Clustering_Image_segmentation_grayscale_1.0.py  Contour_drawing.py  Denoising_of_region.py  Diffraction_simulation_ZA_finding.py  Edge_Detection_Image_segmentation_grayscale_1.0.py  FFT_calibration_and_filtering.py  FFT_peak_recognition_DL_model.py  FFT_spot_fringes_ML.py  FileConversor.py  File_conversors.py  Full_segmentation_routine_low_mags.py  Gaussian_clustering_refinement.py  Gaussian_refinement1.py  Image_processing_tools.ipynb  KineDP.ipynb  PCA_NMF.py  Pt_region_identification.py  TestDiff1.1.ipynb  ZA_from_lab_FFT.py  model_metadict_final.tar  parameters
EELS_QuantMaps/: EELS_QuantMaps_TemplMatch_Profile.py
FEM_modelling_code/: Basic_nextnanopy_setup.py  Segmentation_profile_into_nextnano_profile.py
GPA_automation/: GPA_automated_Wrapper.py  GPA_inputs.py  parameters
SAM_Segmentor/: SAM_Segm_Functions.py
Strain_to_atomistic/: GPA_to_atom_displ_base.py
(+47 files in other folders)
